style: increase InfoTile width to fix text overflow, closes #46

--- a/src/components/AccountComponents/InfoTile/InfoTile.scss
+++ b/src/components/AccountComponents/InfoTile/InfoTile.scss
@@ -6,7 +6,7 @@
   flex-direction: column;
   justify-content: space-evenly;
   height: 130px;
-  width: 130px;
+  width: 150px;
   background: $secondary-background;
   border-radius: 10px;
   padding: 0 toRem(20);
